crates/executor/src/tests/sql/ddl/snapshots/table/query_drop_table.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"SHOW TABLES IN public STARTS WITH 'test'\""
info: "Setup queries: CREATE TABLE embucket.public.test (id INT) as VALUES (1), (2); DROP TABLE embucket.public.test"
---
Ok(
    [
        "++",
        "++",
    ],
)
