crates/executor/src/tests/sql/ddl/snapshots/table/query_drop_table_if_exists_missing_table_should_pass.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE IF EXISTS embucket.public.missing\""
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
