crates/executor/src/tests/sql/ddl/snapshots/table/query_truncate_missing.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"TRUNCATE TABLE missing_table\""
---
Err(
    "Error: DataFusion error: Error during planning: table 'embucket.public.missing_table' not found",
)
