crates/executor/src/tests/sql/ddl/snapshots/table/query_truncate_table.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"TRUNCATE TABLE employee_table\""
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
