crates/executor/src/tests/sql/ddl/snapshots/table/query_truncate_table_full.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"SELECT count() FROM embucket.public.employee_table\""
info: "Setup queries: TRUNCATE TABLE embucket.public.employee_table"
---
Ok(
    [
        "+---------+",
        "| count() |",
        "+---------+",
        "| 0       |",
        "+---------+",
    ],
)
